# spring-batch-rs

./: .gitignore  404.html  CLAUDE.md  Cargo.toml  Makefile  README.md  codecov.yml  foo.csv  index.html  products.json  sitemap-0.xml  sitemap-index.xml  tarpaulin-report.html
.claude/rules/: 01-rustdoc.md  02-unit-tests.md  03-examples.md  04-documentation.md
.cursor/: cursor-rule.mdc
.cursor/rules/: cursor-rule.mdc  doc-rules.mdc  quality-rules.md  quality-rules.mdc  rust-rules.mdc
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  clippy.yml  deploy-docs.yml  docs.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  fmt.yml  release.yml  rust.yml  test.yml
_astro/: MobileTableOfContents.astro_astro_type_script_index_0_lang.D3h7WmyO.js  Search.astro_astro_type_script_index_0_lang.CKC4Ikph.js  TableOfContents.astro_astro_type_script_index_0_lang.Si0ZvO83.js  _basePickBy.CLC8DT8Q.js  _baseUniq.DyrNWqXh.js  arc.YWiN93c_.js  architectureDiagram-2XIMDMQ5.BOH7tDyL.js  blockDiagram-WCTKOSBZ.BMlPGa3b.js  c4Diagram-IC4MRINW.BdMo_GtT.js  channel.CZaSwnWY.js  chunk-4BX2VUAB.muIosVzM.js  chunk-55IACEB6.DQYXV47_.js  chunk-FMBD7UC4.1eLXdCi-.js  chunk-JSJVCQXG.BeuiM75T.js  chunk-KX2RTZJC.Fl91jvtD.js  chunk-NQ4KR5QH.CPglSvsY.js  chunk-QZHKN3VN.C2guURH_.js  chunk-WL4C6EOR.CUqkHw2q.js  classDiagram-v2-RAHNMMFH.h7zXLyry.js  clone.BwTo3P7V.js  cose-bilkent-S5V4N54A.BMup1-LV.js  dagre-KLK3FWXG.BQ3oMX8i.js  diagram-E7M64L7V.YgdalKGC.js  diagram-IFDJBPK2.CB5FzrK0.js  diagram-P4PSJMXO.CzLOH43P.js  erDiagram-INFDFZHY.fxCumcgS.js  flowDiagram-PKNHOUZH.BhhORkKq.js  ganttDiagram-A5KZAMGK.D6pIhVJ1.js  gitGraphDiagram-K3NZZRJ6.Ddmt8Lsj.js  graph.CA7H-ZYj.js  index.CsUG9BKP.css  infoDiagram-LFFYTUFH.DjVXr0zX.js  ishikawaDiagram-PHBUUO56.Bp6u_5XL.js  journeyDiagram-4ABVD52K.Dxz5UgLn.js  kanban-definition-K7BYSVSG.qxkcEJPe.js  layout.d_uslW1l.js  linear.DpSyvSc4.js  mermaid.core.CS2a1KRO.js  mindmap-definition-YRQLILUH.B_9XNAsA.js  page.BQNa4xMA.js  (+13 more)
api/: index.html
api/item-processor/: index.html
api/item-reader/: index.html
api/item-writer/: index.html
api/tasklet/: index.html
architecture/: index.html
benchmark/java/: pom.xml
build-tools/: cargo-check.sh  cargo-doc.sh  cargo-test.sh
docs/: CHANGELOG_unified_builders.md  FINAL_SUMMARY.md  builder_enforcement.md  migration_to_unified_builders.md  unified_rdbc_builders.md
docs/plans/: 2026-02-20-coding-standards-implementation.md  2026-02-20-homepage-redesign-design.md  2026-02-20-homepage-redesign.md
error-handling/: index.html
examples/: Cargo.toml  advanced_patterns.rs  benchmark_csv_postgres_xml.rs  chaining_processors.rs  chaining_writers.rs  csv_processing.rs  csv_reader_with_headers.rs  database_agnostic_binder_example.rs  database_processing.rs  fake_person_generator.rs  filter_records_from_csv_with_processor.rs  ftp_transfer_tasklet.rs  generate_csv_file_from_json_file_with_processor.rs  generate_csv_file_without_headers_from_fake_persons.rs  generate_json_file_from_csv_string_with_fault_tolerance.rs  generate_json_file_from_fake_persons.rs  generate_json_file_from_xml_file.rs  generate_xml_from_csv_with_processor.rs  generic_database_writer_example.rs  generic_database_writer_with_db_param_example.rs  index.html  insert_records_into_mysql_database.rs  json_generate_fake_person.rs  json_processing.rs  json_reader.rs  log_records_from_postgres_database.rs  mongodb_processing.rs  mysql_writer_example.rs  orm_processing.rs  orm_reader_example.rs  orm_writer_example.rs  read_records_from_mongodb_database.rs  sqlite_writer_example.rs  tasklet_ftp.rs  tasklet_s3.rs  tasklet_zip.rs  transform_data_from_json_to_csv.rs  write_records_to_mongodb_database.rs  xml_processing.rs  zip_files_tasklet.rs
examples/advanced-patterns/: index.html
examples/csv/: index.html
examples/data/: cars_with_headers.csv  complex_vehicles.xml  houses.csv  output_houses.xml  persons.json
examples/database/: index.html
examples/json/: index.html
examples/mongodb/: index.html
examples/orm/: index.html
examples/src/: csv_reader.rs  fake_person_generator.rs
examples/tasklets/: index.html
examples/xml/: index.html
fr/: index.html
fr/api/: index.html
fr/architecture/: index.html
fr/error-handling/: index.html
fr/examples/: index.html
fr/getting-started/: index.html
fr/processing-models/: index.html
fr/quick-examples/: index.html
fr/simple/: index.html
fr/tasklets/: index.html
fr/test/: index.html
fr/tutorials/: index.html
getting-started/: index.html
item-readers-writers/overview/: index.html
pagefind/: pagefind-entry.json  pagefind.en_8f4fe4723f.pf_meta  pagefind.fr_141fcb77c0.pf_meta  wasm.fr.pagefind
pagefind/fragment/: en_15b9167.pf_fragment  en_1a94757.pf_fragment  en_1b3968a.pf_fragment  en_1dfd6e6.pf_fragment  en_2276c48.pf_fragment  en_2668ca5.pf_fragment  en_28a852c.pf_fragment  en_3ebfafb.pf_fragment  en_416b235.pf_fragment  en_43161e9.pf_fragment  en_4f8d7a8.pf_fragment  en_52e15e1.pf_fragment  en_544e5bd.pf_fragment  en_5fa7124.pf_fragment  en_5fcbc75.pf_fragment  en_7d3fb24.pf_fragment  en_a51817a.pf_fragment  en_a9d4dae.pf_fragment  en_ac2dc9a.pf_fragment  en_aeebc1c.pf_fragment  en_afde293.pf_fragment  en_b8b85c2.pf_fragment  en_bbbf484.pf_fragment  en_d729d24.pf_fragment  en_dae3e67.pf_fragment  en_e4797c0.pf_fragment  en_f7c87a1.pf_fragment  en_ffde903.pf_fragment  fr_1b75e43.pf_fragment  fr_2361435.pf_fragment  fr_254ec68.pf_fragment  (+25 more)
processing-models/: index.html
quick-examples/: index.html
simple/: index.html
src/: error.rs  lib.rs
tasklets/: index.html
test/: index.html
tests/: csv_integration.rs  error_cases.rs  ftp_integration.rs  integration_test.rs  mongodb.rs  orm_integration.rs  rdbc_mysql.rs  rdbc_postgres.rs  rdbc_sqlite.rs  s3_integration.rs  xml_integration.rs  zip_integration.rs
tutorials/: index.html
website/: .firebaserc  Dockerfile  LICENSE  README.md  astro.config.mjs  docusaurus.config.ts  netlify.toml  nginx.conf  package-lock.json  package.json  sidebars.ts
(+211 files in other folders)
