[package]
name = "spring-batch-rs-examples"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
log = "0.4.17"
env_logger = "0.10.0"
serde = { version = "1.0.158", features = ["derive"] }
spring-batch-rs = { path = "../", features = ["csv", "logger", "fake"] }

[[example]]
name = "csv_reader"
path = "src/csv_reader.rs"

[[example]]
name = "fake_person_generator"
path = "src/fake_person_generator.rs"
